# time_series_llm_mcp

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
docs/: project.md
